# scholarr-mobile-backend

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
apps/activities/: admin.py  apps.py  models.py  utils.py
apps/activities/migrations/: 0001_initial.py
apps/class_groups/: admin.py  apps.py  models.py  permissions.py  signals.py  urls.py  utils.py
apps/class_groups/api/: serializers.py  views.py
apps/class_groups/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
apps/classroom_contents/: admin.py  apps.py  models.py  options.py  permissions.py  signals.py  urls.py  utils.py
apps/classroom_contents/api/: serializers.py  views.py
apps/classrooms/: admin.py  apps.py  models.py  permissions.py  urls.py  utils.py
apps/core/: decorators.py  exceptions.py  helpers.py  permissions.py  urls.py  utils.py
apps/plagiarism_detector/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py
apps/planners/: apps.py
apps/profiles/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  validators.py
apps/schedules/: admin.py  models.py  urls.py  utils.py
apps/sentiment_analysis/: apps.py  tests.py  trainer.py  utils.py
apps/users/: admin.py  forms.py  managers.py  models.py  signals.py  tests.py  urls.py  utils.py
configs/: asgi.py  definitions.py  urls.py  wsgi.py
configs/settings/: heroku.py  settings.py  utils.py
docs/: changelogs.md  database_setup.md  setting_up_gmail.md
scripts/: database.sql  reset_migrations.sh
templates/users/: email_verification.html  email_verified.html  password_reset.html
(+35 files in other folders)
